Fix the spacing between form fields

--- a/css/theme.css
+++ b/css/theme.css
@@ -11,7 +11,11 @@
 }
 
 html {
+  box-sizing: border-box;
+  font-family: Georgia, serif;
+  line-height: 1.5;
   font-family: var(--font-primary);
+  background-color: var(--color-primary-light);
 }
 
 a {
